2008-03-04  Hans Breuer  <hans@breuer.org>

	* objects/standard/Makefile.am : ooops, was not built anymore;)gedit 

	[autobreak trial and error - finally makes 'make distcheck' pass]
	* bindings/Makefile.am : dont try to install anything
	* data/Makefile.am : add dia-splash.png to EXTRA_DIST
	* doc/en/Makefile.am : add dia-dbk-to-chapter.sed to EXTRA_DIST
	* xmldocs.make : s/docdir/helpdocdir/
	* po/POTFILES.(in|skip) : updated

2008-03-03  Hans Breuer  <hans@breuer.org>

	* lib/makefile.msc : compile units.c and ensure definition of
	GLIB_GEN_MARSHAL

2008-03-01  Hans Breuer  <hans@breuer.org>

	* objects/Misc/analog_clock.c : move hour hand by the minute
	Patch from Paul McGuire fixing bug #516469

	* lib/font.c : dia_font_get_sizes() was wrongly assuming single
	line passed in. Patch inspired by Saurabh Nanda, fixes bug #482585

2008-03-01  Hans Breuer  <hans@breuer.org>

	* objects/custom_lines/custom_linetypes.c 
	  objects/custom_lines/Makefile.am : make the hack to include stuff
	from objects/standard pass 'make distcheck'. Looks very suspicous from 
	the design point of view. ObjectTypeOps are not meant to be reused.

	* objects/SISSI/Makefile.am objects/standard/Makefile.am
	  objects/Database/Makefile.am doc/fr/Makefile.am lib/newgroup.c :
	changes to make 'make distcheck' work ...
	* bindings/Makefile.am : ... almost ;)

2008-03-01  Hans Breuer  <hans@breuer.org>

	* bindings/* : make it compile again after DiaObject method renaming
	* lib/units.[ch] : gobal variables need to be explicit exported - or
	better avoided
	* objects/custom/custom_object.c objects/custom/shape_info.c : fix
	missing includes and gccisms (c99isms)

2008-02-20  Lars Clausen  <lars@raeder.dk>

	* objects/standard/line.c (line_adjust_for_absolute_gap): Fix
	compilation problem for MacOS by not redefining the same function.

2008-02-12  Lars Clausen  <lars@raeder.dk>

	* objects/custom/custom_object.c:
	* objects/custom/shape_info.h:
	* objects/custom/shape_info.c:
	* lib/widgets.c: